--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="btnparent px-2">
             <div class="calcbtns row ">
-                <div class="btn w-25 p-2 border-0"><button id="clear" class="btngray w-100 p-1 border-0"><small><i class="fa-solid fa-trash"></i></small></button></div>
+                <div class="btn w-25 p-2 border-0"><button id="clear" class="btngray w-100 p-1 border-0"><small><i class="fa-solid fa-broom"></i></small></button></div>
                 <div class="btn w-25 p-2 border-0"><button id="delbtn" class="btngray w-100 p-1 border-0"><i class="fa-solid fa-delete-left"></i></button></div>
                 <div class="btn w-25 p-2 border-0"><button class="btnblue symbol w-100 p-1 border-0">/</button></div>
                 <div class="btn w-25 p-2 border-0"><button class="btnblue symbol w-100 p-1 border-0">*</button></div>
